# alg_app

./: CMakeLists.txt
src/: algoritms.h  main.cpp
test/: CMakeLists.txt  basic_test001.cpp  testFicture.h  tools.h
